fixed error message, still problems with removing msg

--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -25,16 +25,15 @@
 			margin-top:.2em;
 			margin-bottom:.2em;
 			margin-left: -1.5em;
-			border-radius: 35%;
-			//border-top-right-radius: 0px;
-			border-bottom-right-radius: 0px;
+			border-radius: 50%;
+			// border-top-right-radius: 0px;
+			// border-bottom-right-radius: 0px;
 
 			vertical-align: top;
 			display: inline-block;
 			background: none;
 			background: transparent;
 			background-size:100%!important;
-
 		}
 		.username,.text{
 			display: inline-block;
