--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -35,6 +35,9 @@
 			background: transparent;
 			background-size:100%!important;
 		}
+		.avatar-border{
+			border:1px solid darkgrey;
+		}
 		.username,.text{
 			display: inline-block;
 			vertical-align: middle;
