--- a/css/main.css
+++ b/css/main.css
@@ -864,6 +864,11 @@ SUPER SLICK TRANSFORMS
 }
 
 /* line 38, ../sass/_messages.scss */
+.avatar-border {
+  border: 1px solid darkgrey;
+}
+
+/* line 41, ../sass/_messages.scss */
 .username, .text {
   display: inline-block;
   vertical-align: middle;
@@ -878,12 +883,12 @@ SUPER SLICK TRANSFORMS
   hyphens: auto;
 }
 
-/* line 53, ../sass/_messages.scss */
+/* line 56, ../sass/_messages.scss */
 .message-image {
   max-height: 5em;
 }
 
-/* line 58, ../sass/_messages.scss */
+/* line 61, ../sass/_messages.scss */
 .diffUser {
   margin-top: 1em;
   border-top-right-radius: .5em;
@@ -891,14 +896,14 @@ SUPER SLICK TRANSFORMS
   border-top: 1px solid lightgrey;
 }
 
-/* line 64, ../sass/_messages.scss */
+/* line 67, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 71, ../sass/_messages.scss */
+/* line 74, ../sass/_messages.scss */
 .cssanimations.csstransitions .realtime {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
@@ -906,12 +911,12 @@ SUPER SLICK TRANSFORMS
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 79, ../sass/_messages.scss */
+/* line 82, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 82, ../sass/_messages.scss */
+/* line 85, ../sass/_messages.scss */
 #mymessage {
   vertical-align: middle;
   resize: none;
@@ -928,60 +933,60 @@ SUPER SLICK TRANSFORMS
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 113, ../sass/_messages.scss */
+  /* line 116, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 114, ../sass/_messages.scss */
+  /* line 117, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 117, ../sass/_messages.scss */
+  /* line 120, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 118, ../sass/_messages.scss */
+  /* line 121, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 121, ../sass/_messages.scss */
+  /* line 124, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 122, ../sass/_messages.scss */
+  /* line 125, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 125, ../sass/_messages.scss */
+  /* line 128, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 126, ../sass/_messages.scss */
+  /* line 129, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 129, ../sass/_messages.scss */
+  /* line 132, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 130, ../sass/_messages.scss */
+  /* line 133, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
