--- a/css/main.css
+++ b/css/main.css
@@ -720,7 +720,7 @@ SUPER SLICK TRANSFORMS
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  color: #666;
+  color: #444;
 }
 
 /* line 108, ../sass/_sidebar.scss */
@@ -801,7 +801,7 @@ SUPER SLICK TRANSFORMS
   width: .5em;
   display: inline-block;
   margin: .4em .5em 0 0;
-  border-radius: 50%;
+  border-radius: 70%;
   float: left;
   opacity: .5;
 }
@@ -891,9 +891,14 @@ SUPER SLICK TRANSFORMS
 /* line 60, ../sass/_messages.scss */
 .message-image {
   max-height: 5em;
+  display: inline-block;
+  float: left;
+  clear: left;
+  margin-top: .2em;
+  margin-top: .2em;
 }
 
-/* line 65, ../sass/_messages.scss */
+/* line 69, ../sass/_messages.scss */
 .diffUser {
   margin-top: 1em;
   border-top-right-radius: .5em;
@@ -901,14 +906,14 @@ SUPER SLICK TRANSFORMS
   border-top: 1px solid lightgrey;
 }
 
-/* line 71, ../sass/_messages.scss */
+/* line 75, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 78, ../sass/_messages.scss */
+/* line 82, ../sass/_messages.scss */
 .cssanimations.csstransitions .realtime {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
@@ -916,12 +921,12 @@ SUPER SLICK TRANSFORMS
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 86, ../sass/_messages.scss */
+/* line 90, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 89, ../sass/_messages.scss */
+/* line 93, ../sass/_messages.scss */
 #mymessage {
   vertical-align: middle;
   resize: none;
@@ -938,18 +943,6 @@ SUPER SLICK TRANSFORMS
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 120, ../sass/_messages.scss */
-  0% {
-    border-left: 1px solid #ffbb00;
-  }
-
-  /* line 121, ../sass/_messages.scss */
-  100% {
-    border-left: 1px solid lightgrey;
-  }
-}
-
-@-moz-keyframes realtime-anim {
   /* line 124, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
@@ -961,7 +954,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-@-ms-keyframes realtime-anim {
+@-moz-keyframes realtime-anim {
   /* line 128, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
@@ -973,7 +966,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-@-o-keyframes realtime-anim {
+@-ms-keyframes realtime-anim {
   /* line 132, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
@@ -985,13 +978,25 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-@keyframes realtime-anim {
+@-o-keyframes realtime-anim {
   /* line 136, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
   /* line 137, ../sass/_messages.scss */
+  100% {
+    border-left: 1px solid lightgrey;
+  }
+}
+
+@keyframes realtime-anim {
+  /* line 140, ../sass/_messages.scss */
+  0% {
+    border-left: 1px solid #ffbb00;
+  }
+
+  /* line 141, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
