--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -10,3 +10,9 @@ h1,h2,h3,h4,h5,h6{
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: 300;
 }
+h1{font-size: 3em;}
+h2{font-size: 2.7em;}
+h3{font-size: 2.4em;}
+h4{font-size: 2em;}
+h5{font-size: 1.5em;}
+h6{font-size: 1.2em;}
