--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,36 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
 }
 
+/* line 14, ../sass/_typography.scss */
+h1 {
+  font-size: 3em;
+}
+
+/* line 15, ../sass/_typography.scss */
+h2 {
+  font-size: 2.7em;
+}
+
+/* line 16, ../sass/_typography.scss */
+h3 {
+  font-size: 2.4em;
+}
+
+/* line 17, ../sass/_typography.scss */
+h4 {
+  font-size: 2em;
+}
+
+/* line 18, ../sass/_typography.scss */
+h5 {
+  font-size: 1.5em;
+}
+
+/* line 19, ../sass/_typography.scss */
+h6 {
+  font-size: 1.2em;
+}
+
 /*
 SUPER SLICK TRANSFORMS
 */
@@ -846,14 +876,13 @@ SUPER SLICK TRANSFORMS
   background: #FDFDFD;
   border-left: 1px solid lightgrey;
   border-right: 1px solid lightgrey;
+  position: relative;
 }
 
-/* line 22, ../sass/_messages.scss */
+/* line 23, ../sass/_messages.scss */
 .avatar {
   height: 1.8em;
   width: 1.8em;
-  margin-top: .2em;
-  margin-bottom: .2em;
   margin-left: -1.5em;
   border-radius: 50%;
   vertical-align: top;
@@ -861,14 +890,17 @@ SUPER SLICK TRANSFORMS
   background: none;
   background: transparent;
   background-size: 100% !important;
+  position: absolute;
+  left: 0.4em;
+  top: 0em;
 }
 
-/* line 38, ../sass/_messages.scss */
+/* line 43, ../sass/_messages.scss */
 .avatar-border {
   border: 1px solid darkgrey;
 }
 
-/* line 41, ../sass/_messages.scss */
+/* line 46, ../sass/_messages.scss */
 .text {
   display: inline-block;
   vertical-align: middle;
@@ -883,17 +915,17 @@ SUPER SLICK TRANSFORMS
   hyphens: auto;
 }
 
-/* line 55, ../sass/_messages.scss */
+/* line 60, ../sass/_messages.scss */
 .username {
   display: none;
 }
 
-/* line 60, ../sass/_messages.scss */
+/* line 65, ../sass/_messages.scss */
 .message-image {
   max-height: 5em;
 }
 
-/* line 65, ../sass/_messages.scss */
+/* line 70, ../sass/_messages.scss */
 .diffUser {
   margin-top: 1em;
   border-top-right-radius: .5em;
@@ -901,14 +933,14 @@ SUPER SLICK TRANSFORMS
   border-top: 1px solid lightgrey;
 }
 
-/* line 71, ../sass/_messages.scss */
+/* line 76, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 78, ../sass/_messages.scss */
+/* line 83, ../sass/_messages.scss */
 .cssanimations.csstransitions .realtime {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
@@ -916,12 +948,12 @@ SUPER SLICK TRANSFORMS
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 86, ../sass/_messages.scss */
+/* line 91, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 89, ../sass/_messages.scss */
+/* line 94, ../sass/_messages.scss */
 #mymessage {
   vertical-align: middle;
   resize: none;
@@ -938,60 +970,60 @@ SUPER SLICK TRANSFORMS
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 120, ../sass/_messages.scss */
+  /* line 125, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 121, ../sass/_messages.scss */
+  /* line 126, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 124, ../sass/_messages.scss */
+  /* line 129, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 125, ../sass/_messages.scss */
+  /* line 130, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 128, ../sass/_messages.scss */
+  /* line 133, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 129, ../sass/_messages.scss */
+  /* line 134, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 132, ../sass/_messages.scss */
+  /* line 137, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 133, ../sass/_messages.scss */
+  /* line 138, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 136, ../sass/_messages.scss */
+  /* line 141, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 137, ../sass/_messages.scss */
+  /* line 142, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
