--- a/css/main.css
+++ b/css/main.css
@@ -937,8 +937,13 @@ SUPER SLICK TRANSFORMS
   margin-top: .2em;
   margin-top: .2em;
 }
+/* line 72, ../sass/_messages.scss */
+.message-image.exp {
+  max-width: 100%;
+  max-height: auto !important;
+}
 
-/* line 74, ../sass/_messages.scss */
+/* line 78, ../sass/_messages.scss */
 .diffUser {
   margin-top: 1em;
   border-top-right-radius: .5em;
@@ -946,14 +951,14 @@ SUPER SLICK TRANSFORMS
   border-top: 1px solid lightgrey;
 }
 
-/* line 80, ../sass/_messages.scss */
+/* line 84, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 87, ../sass/_messages.scss */
+/* line 91, ../sass/_messages.scss */
 .cssanimations.csstransitions .realtime {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
@@ -961,12 +966,12 @@ SUPER SLICK TRANSFORMS
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 95, ../sass/_messages.scss */
+/* line 99, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 98, ../sass/_messages.scss */
+/* line 102, ../sass/_messages.scss */
 #mymessage {
   vertical-align: middle;
   resize: none;
@@ -983,18 +988,6 @@ SUPER SLICK TRANSFORMS
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 129, ../sass/_messages.scss */
-  0% {
-    border-left: 1px solid #ffbb00;
-  }
-
-  /* line 130, ../sass/_messages.scss */
-  100% {
-    border-left: 1px solid lightgrey;
-  }
-}
-
-@-moz-keyframes realtime-anim {
   /* line 133, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
@@ -1006,7 +999,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-@-ms-keyframes realtime-anim {
+@-moz-keyframes realtime-anim {
   /* line 137, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
@@ -1018,7 +1011,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-@-o-keyframes realtime-anim {
+@-ms-keyframes realtime-anim {
   /* line 141, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
@@ -1030,13 +1023,25 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-@keyframes realtime-anim {
+@-o-keyframes realtime-anim {
   /* line 145, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
   /* line 146, ../sass/_messages.scss */
+  100% {
+    border-left: 1px solid lightgrey;
+  }
+}
+
+@keyframes realtime-anim {
+  /* line 149, ../sass/_messages.scss */
+  0% {
+    border-left: 1px solid #ffbb00;
+  }
+
+  /* line 150, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
@@ -1188,4 +1193,96 @@ input {
   right: 0;
   background: rgba(255, 255, 255, 0.5);
   max-width: 15em;
+}
+
+/*
+Tipr drop 1.0
+Copyright (c) 2013 Tipue
+Tipr is released under the MIT License
+http://www.tipue.com/tipr
+*/
+/* line 11, ../sass/_tipr.scss */
+.tipr_content {
+  font: 13px/1.7 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #333;
+  background-color: #fff;
+  color: #333;
+  padding: 9px 17px;
+}
+
+/* line 19, ../sass/_tipr.scss */
+.tipr_container_bottom {
+  display: none;
+  position: absolute;
+  margin-top: 13px;
+  z-index: 1000;
+}
+
+/* line 26, ../sass/_tipr.scss */
+.tipr_container_top {
+  display: none;
+  position: absolute;
+  margin-top: -75px;
+  z-index: 1000;
+}
+
+/* line 33, ../sass/_tipr.scss */
+.tipr_point_top, .tipr_point_bottom {
+  position: relative;
+  background: #fff;
+  border: 1px solid #dcdcdc;
+}
+
+/* line 39, ../sass/_tipr.scss */
+.tipr_point_top:after, .tipr_point_top:before {
+  position: absolute;
+  pointer-events: none;
+  border: solid transparent;
+  top: 100%;
+  content: "";
+  height: 0;
+  width: 0;
+}
+
+/* line 49, ../sass/_tipr.scss */
+.tipr_point_top:after {
+  border-top-color: #fff;
+  border-width: 8px;
+  left: 50%;
+  margin-left: -8px;
+}
+
+/* line 56, ../sass/_tipr.scss */
+.tipr_point_top:before {
+  border-top-color: #dcdcdc;
+  border-width: 9px;
+  left: 50%;
+  margin-left: -9px;
+}
+
+/* line 63, ../sass/_tipr.scss */
+.tipr_point_bottom:after, .tipr_point_bottom:before {
+  position: absolute;
+  pointer-events: none;
+  border: solid transparent;
+  bottom: 100%;
+  content: "";
+  height: 0;
+  width: 0;
+}
+
+/* line 73, ../sass/_tipr.scss */
+.tipr_point_bottom:after {
+  border-bottom-color: #fff;
+  border-width: 8px;
+  left: 50%;
+  margin-left: -8px;
+}
+
+/* line 80, ../sass/_tipr.scss */
+.tipr_point_bottom:before {
+  border-bottom-color: #dcdcdc;
+  border-width: 9px;
+  left: 50%;
+  margin-left: -9px;
 }
