--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -5,10 +5,11 @@ $sidebar-width:12em;
 
 $color-main:lighten(#2980b9,10%);
 
-$color-main:#004A7A;
-$color-main:#FFCC00;
-$color-main:#ffc801;
-$color-main:#FFBB00;
+$color-main:#FFBB00;//yellow
+$color-main:#E96B56;//red-rosa
+$color-main:#EB8A48;//orange-brown
+$color-main:#E4582A;//
+
 
 $color-secondary: #f1c40f;
 
