--- a/css/main.css
+++ b/css/main.css
@@ -913,7 +913,8 @@ SUPER SLICK TRANSFORMS
   vertical-align: middle;
   margin-left: .5em;
   margin-right: .5em;
-  margin-top: .5em;
+  margin-top: .2em;
+  margin-bottom: .2em;
   -ms-word-break: break-all;
   word-break: break-all;
   word-break: break-word;
@@ -922,12 +923,12 @@ SUPER SLICK TRANSFORMS
   hyphens: auto;
 }
 
-/* line 60, ../sass/_messages.scss */
+/* line 61, ../sass/_messages.scss */
 .username {
   display: none;
 }
 
-/* line 65, ../sass/_messages.scss */
+/* line 66, ../sass/_messages.scss */
 .message-image {
   max-height: 5em;
   display: inline-block;
@@ -936,28 +937,28 @@ SUPER SLICK TRANSFORMS
   margin-top: .2em;
   margin-top: .2em;
 }
-/* line 72, ../sass/_messages.scss */
+/* line 73, ../sass/_messages.scss */
 .message-image.exp {
   max-width: 100%;
   max-height: auto !important;
 }
 
-/* line 78, ../sass/_messages.scss */
+/* line 79, ../sass/_messages.scss */
 .diffUser {
-  margin-top: 1em;
+  margin-top: .7em;
   border-top-right-radius: .5em;
   border-top-left-radius: .5em;
   border-top: 1px solid lightgrey;
 }
 
-/* line 84, ../sass/_messages.scss */
+/* line 85, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 91, ../sass/_messages.scss */
+/* line 92, ../sass/_messages.scss */
 .cssanimations.csstransitions .realtime {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
@@ -965,12 +966,12 @@ SUPER SLICK TRANSFORMS
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 109, ../sass/_messages.scss */
+/* line 110, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 112, ../sass/_messages.scss */
+/* line 113, ../sass/_messages.scss */
 #mymessage {
   vertical-align: middle;
   resize: none;
@@ -987,60 +988,60 @@ SUPER SLICK TRANSFORMS
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 143, ../sass/_messages.scss */
+  /* line 144, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #e4582a;
   }
 
-  /* line 144, ../sass/_messages.scss */
+  /* line 145, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 147, ../sass/_messages.scss */
+  /* line 148, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #e4582a;
   }
 
-  /* line 148, ../sass/_messages.scss */
+  /* line 149, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 151, ../sass/_messages.scss */
+  /* line 152, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #e4582a;
   }
 
-  /* line 152, ../sass/_messages.scss */
+  /* line 153, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 155, ../sass/_messages.scss */
+  /* line 156, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #e4582a;
   }
 
-  /* line 156, ../sass/_messages.scss */
+  /* line 157, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 159, ../sass/_messages.scss */
+  /* line 160, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #e4582a;
   }
 
-  /* line 160, ../sass/_messages.scss */
+  /* line 161, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
