--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -48,7 +48,8 @@
 			vertical-align: middle;
 			margin-left:.5em;
 			margin-right:.5em;
-			margin-top:.5em;
+			margin-top:.2em;
+			margin-bottom:.2em;
 			-ms-word-break: break-all;
 			word-break: break-all;
 			// Non standard for webkit
@@ -76,7 +77,7 @@
 		}
 		
 		.diffUser{
-			margin-top:1em;
+			margin-top:.7em;
 			border-top-right-radius: .5em;
 			border-top-left-radius: .5em;
 			border-top:1px solid $color-border;
