--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -9,6 +9,8 @@ $color-main:#FFBB00;//yellow
 $color-main:#E96B56;//red-rosa
 $color-main:#EB8A48;//orange-brown
 $color-main:#E4582A;//
+$color-main:#EF6701;//
+$color-main:#FF7200;//
 
 
 $color-secondary: #f1c40f;
